k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeoff
spec:
  replicas: 2
  selector:
    matchLabels:
      app: timeoff
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: timeoff
    spec:
      containers:
      - name: timeoff
        image: dperezro/timeoff:ready
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128M
          limits:
            cpu: 300m
            memory: 512M
