k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: timeoff
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: timeoff
