k8s/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: timeoff-http
spec:
  entryPoints:
    - web
  routes:
      ## Default fallback goes to FE
    - match: PathPrefix(`/timeoff`)
      kind: Rule
      middlewares:
      - name: redirectscheme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: timeoff-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/timeoff`)
      kind: Rule
      services:
      - name: timeoff
        port: 3000
      middlewares:
      - name: redirectregex
  # Use the secret generated by the Traefik's tlsstore
  tls: {}
#    secretName: timeoff-tls
---
# Redirect with domain replacement
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectregex
spec:
  redirectRegex:
    regex: ^https?://(.+)snwbr.net/?(.*)
    replacement: https://snwbr.net/${2}
    permanent: true
---
## Redirect HTTP requests to HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
